<resources>
    <string name="app_name">AndroidProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="testVakCode">IIPSEN4</string>
    <string name="testCijfer">6.0</string>
    <string name="testEC">3 EC</string>
    <string name="testKeuzevak">Keuzevak</string>
    <string name="testJaar">Jaar 1</string>
    <string name="testPeriode">Periode 3</string>
</resources>
