<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:background="#FFFFFF"
    android:baselineAligned="false"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/vakCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            tools:text="@string/testVakCode" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jaar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/testJaar" />
            <TextView
                android:id="@+id/periode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/testPeriode"/>
        </LinearLayout>

        <TextView
            android:id="@+id/ec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/testEC"
            android:textColor="@color/textLightGrey"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/cijfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/testCijfer"
            android:textSize="17sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/gehaald"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="Gehaald"
            app:srcCompat="@drawable/ic_check_circle_green_24dp" />
        <ImageView
            android:id="@+id/nietGehaald"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_remove_circle_red_24dp"
            android:contentDescription="Niet gehaald"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/keuzevak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/testKeuzevak"
            android:textColor="@color/textLightGrey"/>

    </LinearLayout>

</LinearLayout>